# perception_ar_kinect

./: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
action/: GetDrinkColor.action  QueryContent.action
data/: objects_kinect
data/marker/: markers.ps
launch/: all_modules.launch  ar_kinect.launch  ar_perception.launch  content_detection.launch
owl/: perception_ar_kinect.owl  perception_ar_kinect.owl.in
prolog/: import_owl.pl  init.pl  knowrob_perception_ext.pl
src/: ar_action_listener.cpp  ar_marker_listener.cpp  ar_object_listener.cpp  color_trackbar.cpp  export.cpp  get_drink_color_client.cpp  get_drink_color_server.cpp  knowrobMapping.h  mytest.cpp  query_content_client.cpp  query_content_server.cpp
